cabecalho-imagem-color-

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>siteanahenriques</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<header>
-    <h1>vai ser uma imagem aqui</h1> 
-    <ul>
-        <li>home</li>
-        <li>portifolio</li>
-        <li>orçamento</li>
-        <li>ligue já</li>
+</body>
+<header class="cabecalho">
+    <img class="imagem-logo" src="./img/logo Ana Henriques.png" alt="logo ana Henriques">
+    <ul class="lista" >
+        <li class="itens">home</li>
+        <li class="itens">portifolio</li>
+        <li class="itens">orçamento</li>
+        <li class="itens">ligue já</li>
     </ul>    
 </header>
-<body>
 
 </body>
 </html>
